--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
 	<!-- stylesheets -->
 	{{! Styles'n'Scripts }}
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
-	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="{{asset "css/fontawesome-all.min.css"}}">
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/bootstrap-override.css"}}">
