--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -9,40 +9,37 @@
 			<div class="col-md-8 main-content">
 				<!-- start post -->
 				{{#post}}
-				<article class="{{post_class}}">
-					<div class="post-head">
-						<h1 class="post-title">{{{title}}}</h1>
-					</div>
-					{{#if feature_image}}
-					<div class="featured-media" style="background-image: url({{feature_image}});">
-					</div>
-					{{/if}}
-					<div class="post-content">
-						{{content}}
-					</div>
-					<div class="tag-container">
-					{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc"}}
-					{{#foreach tags}}
-							<div class="tag-wrapper">
-									<a href="{{url}}">
-											<div class="bg-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}}style="background-image: url({{feature_image}});"{{/if}}>
-													<div class="overlay">
-															<h2 class="tag-title">{{meta_title}}</h2>
-															{{#if description}}
-															<p class="description tag-description">{{description}}</p>
-															{{/if}}
-															<div class="meta-info">
-																	<span>{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
-															</div>
-													</div>
-											</div>
-									</a>
+					<article class="{{post_class}}">
+						<div class="post-head">
+							<h1 class="post-title">{{{title}}}</h1>
+						</div>
+						{{#if feature_image}}
+							<div class="featured-media" style="background-image: url({{feature_image}});">
 							</div>
-
-					{{/foreach}}
-					{{/get}}
-					</div>
-				</article>
+						{{/if}}
+						<div class="post-content">
+							{{content}}
+						</div>
+						<div class="tag-container">
+							{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc" }}
+								{{#foreach tags}}
+									<div class="tag-wrapper">
+										<a href="{{url}}">
+											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});" {{/if}}>
+											</div>
+											<h2 class="tag-title">{{meta_title}}</h2>
+											{{#if description}}
+												<p class="description">{{description}}</p>
+											{{/if}}
+											<div class="meta-info">
+												<span>{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
+											</div>
+										</a>
+									</div>
+								{{/foreach}}
+							{{/get}}
+						</div>
+					</article>
 				{{/post}}
 				<!-- end post -->
 			</div>
