--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -39,11 +39,11 @@
 			<span class="author"><i class="far fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></span>
 			<span class="tags">
 			{{#if tags}}
-				<i class="fal fa-tags"></i>
+				<i class="far fa-tags"></i>
 			{{tags limit="1"}}
 			{{/if}}
 			</span>
-			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
+			<span class="date"><i class="far fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
 		</span>
 		</div>
 		<a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
