--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -7,12 +7,12 @@
 	<li>
 		<a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fab fa-facebook"></i></a>
 	</li>
-	<!-- google plus -->
-	<li>
-		<a href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;"><i class="fab fa-google-plus"></i></a>
-	</li>
 	<!-- linkedin -->
 	<li>
 		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
+	</li>
+	<!-- Y Combinator -->
+	<li>
+		<a href="javascript:window.location=%22http://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)"><i class="fab fa-y-combinator"></i></a>
 	</li>
 </ul>
