--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -1,14 +1,12 @@
 <!-- start widget -->
-{{#get "posts" limit="3"}}
+{{#get "posts" limit="3" filter="primary_tag:-#hidden"}}
 <div class="widget">
 	<h4 class="title">Recent</h4>
 	<div class="content recent-post">
 		{{#foreach posts}}
-		{{^has tag="#hidden"}}
 			<div class="recent-single-post">
 				<a href="{{url}}" class="post-title">{{title}}</a><div class="date">{{date format="MMMM DD, YYYY"}}</div>
 			</div>
-		{{/has}}
 		{{/foreach}}
 	</div>
 </div>
