--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -616,6 +616,7 @@ pre {
 		img {
 			max-width: 100%;
 			margin-bottom: 14px;
+			border: 1px solid #eaeaea;
 		}
 
 		a {
@@ -986,6 +987,7 @@ pre {
 					.transition(all 0.2s);
 					height: 15px;
 					width: 23px;
+					font-size: 16px;
 				}
 			}
 
@@ -1428,9 +1430,8 @@ p {
 }
 
 .fluid-width-video-wrapper {
-	padding: 0 !important;
-	height: 26.5em;
-	/*height: 425px;*/
+	/*padding: 0 !important;*/
+	padding-top: 56% !important;
 }
 
 .page {
