--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -63,7 +63,7 @@ h2 {
 @media (max-width: 600px) {
   .h2,
   h2 {
-    font-size: 1.5em;
+    font-size: 2em;
   }
 }
 .home-template .main-content {
@@ -78,7 +78,7 @@ h2 {
 }
 .h3,
 h3 {
-  font-size: 1.7em;
+  font-size: 1.5em;
   text-transform: uppercase;
   font-weight: 300;
 }
@@ -181,7 +181,7 @@ pre {
   padding: 0;
   background: none;
   border: none;
-  margin: 20px;
+  margin: 20px 10px;
   font-size: 12px;
 }
 @media (max-width: 600px) {
@@ -378,7 +378,7 @@ pre {
   background: #FFFFFF;
   text-align: left;
   padding: 7px 0;
-  margin: 0;
+  margin-bottom: 20px;
   position: absolute;
   left: 0;
   top: 120%;
@@ -564,7 +564,7 @@ pre {
   opacity: 0.8;
 }
 .post .post-content {
-  margin: 0 10px 20px;
+  margin: 0 10px 10px;
   overflow-x: hidden;
   clear: both;
 }
@@ -1598,5 +1598,155 @@ p {
 @media (min-width: 992px) {
   .col-md-pull-8 {
     right: 0;
+  }
+}
+/*====================================================
+	Bootstrap override
+====================================================*/
+@media (max-width: 800px) {
+  .post-preview {
+    margin: 8px 16px;
+    padding: 10px;
+  }
+  .post-preview.tag-video .post-content {
+    margin: 0;
+  }
+  .post-template .main-header {
+    display: none;
+  }
+  .post-template .featured-media {
+    width: 110%;
+    margin-left: -5%;
+    margin-top: -6%;
+  }
+  #main-menu {
+    border: 0;
+  }
+  #main-menu a {
+    color: white;
+  }
+  .post-template #main-menu li {
+    padding: 20px 0;
+  }
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .main-header {
+    background: #00948e;
+  }
+  .main-navigation {
+    background: #00ada7;
+    padding: 0 20px;
+    margin-bottom: 0;
+    border: 0;
+  }
+  .main-navigation .container {
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .main-navigation .container .row {
+    margin: 0;
+  }
+  .main-navigation .container .row .col-sm-12 {
+    padding: 0;
+  }
+  .main-navigation .container .row .col-sm-12 .navbar-collapse .menu {
+    padding: 0;
+  }
+  .main-navigation .container .row .col-sm-12 .navbar-collapse .menu li {
+    padding: 20px 0;
+  }
+  .main-navigation .container .row .col-sm-12 .navbar-collapse .menu li a {
+    font-weight: 500;
+  }
+  .content-wrap .container {
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .content-wrap .container .main-content {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .content-wrap .container .main-content .post-page,
+  .content-wrap .container .main-content .page-template {
+    padding: 20px 3%;
+    margin-bottom: 0;
+  }
+  .content-wrap .container .main-content .post-page .post-head,
+  .content-wrap .container .main-content .page-template .post-head {
+    padding-bottom: 30px;
+    padding-top: 30px;
+  }
+  .content-wrap .container .main-content .post-page .post-head .post-title,
+  .content-wrap .container .main-content .page-template .post-head .post-title {
+    font-weight: 700;
+    text-align: center;
+  }
+  .content-wrap .container .main-content .post-page .post-head h5,
+  .content-wrap .container .main-content .page-template .post-head h5 {
+    text-align: center;
+  }
+  .content-wrap .container .main-content .post-page .post-head .author,
+  .content-wrap .container .main-content .page-template .post-head .author,
+  .content-wrap .container .main-content .post-page .post-head .date,
+  .content-wrap .container .main-content .page-template .post-head .date {
+    margin: 10px auto 0;
+    display: block;
+  }
+  .content-wrap .container .main-content .post-page .post-meta,
+  .content-wrap .container .main-content .page-template .post-meta {
+    text-align: center;
+  }
+  .content-wrap .container .main-content .post-page .post-content,
+  .content-wrap .container .main-content .page-template .post-content {
+    margin: 0 0 20px;
+    overflow-x: hidden;
+    padding: 10px 3% 0;
+  }
+  .content-wrap .container .main-content .about-author {
+    background: #f0f1f4;
+    padding: 20px;
+    margin-bottom: 0;
+  }
+  .content-wrap .container .main-content .prev-next-wrap {
+    margin: 0;
+    text-align: center;
+    padding: 20px 24px;
+    background: #f0f1f4;
+  }
+  .main-footer {
+    margin: 0;
+  }
+  .main-footer .container {
+    margin: 0;
+    padding: 0;
+  }
+  .pagination {
+    margin: 20px 0;
+  }
+  .page-template .main-navigation,
+  .post-template .main-navigation {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 800px) and (max-width: 600px) {
+  #main-menu {
+    max-width: 310px;
+    border: 0;
+  }
+}
+@media (max-width: 800px) {
+  .fluid-width-video-wrapper {
+    height: 350px;
+  }
+}
+@media (max-width: 500px) {
+  .fluid-width-video-wrapper {
+    height: 236px;
   }
 }
