--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -311,7 +311,7 @@ pre {
     opacity: 0;
   }
 }
-.main-header .container:nth-of-type(1) {
+.main-header .container {
   background: url("https://hackers.nyc3.digitaloceanspaces.com/logo_white.png") center center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -502,6 +502,7 @@ pre {
 @media (max-width: 600px) {
   .post .post-head .post-title {
     white-space: normal;
+    text-align: center;
   }
 }
 .post .post-head .post-title a {
@@ -519,8 +520,9 @@ pre {
 }
 @media (max-width: 600px) {
   .post .post-head .post-excerpt {
-    font-weight: 600;
-    font-size: 1em;
+    font-weight: 500;
+    font-size: 1.2em;
+    text-align: center;
   }
 }
 .post .post-head .post-meta {
@@ -607,18 +609,18 @@ pre {
   .post > .post-permalink .btn {
     font-size: 14px;
     font-weight: 100;
-    padding: 7px 18px;
+    padding: 8px 20px;
   }
 }
 .post .tag-list {
   color: #141624;
-  font-size: 14px;
+  font-size: 15px;
   display: inline;
   height: fit-content;
   margin: auto 0;
 }
 .post .tag-list i {
-  color: #141624;
+  color: #575863;
   margin-right: 7px;
   opacity: 0.6;
   font-size: 12px;
@@ -648,7 +650,7 @@ pre {
 }
 .post .tag-list a {
   color: #141624;
-  font-size: 14px;
+  font-size: 15px;
   opacity: 0.6;
   transition: 0.2s all ease-out;
   font-weight: 600;
@@ -684,6 +686,15 @@ pre {
 .post .share .share-icons li a {
   color: #c4c4c4;
   text-align: center;
+}
+.post .pull-left {
+  color: #575863;
+}
+.post .pull-left a,
+.post .pull-left i,
+.post .pull-left span {
+  color: #575863;
+  opacity: 0.6;
 }
 .post-page .post-head {
   border-bottom: 1px solid #eaeaea;
@@ -854,11 +865,6 @@ pre {
 .main-footer .widget {
   padding: 0 30px;
 }
-@media (max-width: 600px) {
-  .post-footer {
-    padding: 0 3%;
-  }
-}
 .widget {
   margin-bottom: 20px;
 }
@@ -994,31 +1000,6 @@ pre {
 }
 .widget .ad img {
   max-width: 100%;
-}
-.widget .flkr-widget {
-  list-style: none;
-  padding-left: 0;
-}
-.widget .flkr-widget li {
-  display: inline-block;
-  margin: 0 5px 5px 0;
-}
-.widget .flkr-widget li a img {
-  width: 70px;
-  height: 70px;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.widget .flkr-widget li a img:hover {
-  -webkit-opacity: 0.8;
-  -moz-opacity: 0.8;
-  -ms-opacity: 0.8;
-  -o-opacity: 0.8;
-  opacity: 0.8;
-  filter: alpha(opacity=(80));
 }
 /*====================================================
 	Tag page & author page cover
@@ -1679,8 +1660,7 @@ p {
   }
   .content-wrap .container .main-content .post-page .post-head,
   .content-wrap .container .main-content .page-template .post-head {
-    padding-bottom: 30px;
-    padding-top: 30px;
+    padding: 30px 0;
   }
   .content-wrap .container .main-content .post-page .post-head .post-title,
   .content-wrap .container .main-content .page-template .post-head .post-title {
