--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -9,7 +9,7 @@
 
 		{{#has tag="roundup" }}
 			<div class="roundup">
-				<i class="far fa-link"></i>
+				<i class="fas fa-link"></i>
 			</div>
 		{{/has}}
 
@@ -29,14 +29,14 @@
 		</div>
 		<div class="post-permalink">
 			<div class="tag-list">
-				<span class="author"><i class="far fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></span>
+				<span class="author"><i class="fas fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></span>
 				<span class="tags">
 			{{#if tags}}
-				<i class="far fa-tags"></i>
+				<i class="fas fa-tags"></i>
 			{{tags limit="1"}}
 			{{/if}}
 			</span>
-				<span class="date"><i class="far fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
+				<span class="date"><i class="fas fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
 				</span>
 			</div>
 			<a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
