--- a/post.hbs
+++ b/post.hbs
@@ -21,7 +21,7 @@
 						<h1 class="post-title">{{{title}}}</h1>
 						<h5>{{excerpt}}</h5>
 						<div class="post-meta">
-							<div class="date"><i class="fas fa-calendar"></i><span>{{date format="MMMM DD, YYYY"}}</span></div>
+							<div class="date"><i class="fas fa-calendar"></i><span>{{date format="MMMM DD"}}</span></div>
 						</div>
 					</div>
 
