--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -754,6 +754,15 @@ pre {
 		border-bottom: 1px solid #eaeaea;
 		margin-bottom: 20px;
 	}
+
+	@media(max-width: 800px) {
+		.featured-media {
+			width: 110%;
+			margin-left: -5%;
+			margin-top: -7%;
+		}
+	}
+
 }
 /*====================================================
 	pagination
@@ -1741,11 +1750,7 @@ p {
       display: none;
     }
 
-    .featured-media {
-      width: 110%;
-      margin-left: -5%;
-      margin-top: -7%;
-    }
+
   }
 
   #main-menu {
