post page footer

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -859,7 +859,7 @@ pre {
   text-align: center;
 }
 .prev-next-wrap a {
-  margin-bottom: 7px;
+  margin: 10px 0 0;
 }
 /*====================================================
 	sidebar
