--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -935,7 +935,7 @@ pre {
 	text-align: center;
 
 	a {
-		margin-bottom: 7px;
+		margin: 10px 0 0;
 	}
 }
 /*====================================================
