--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -19,16 +19,15 @@
 						{{/if}}
 						<div class="post-content">
 							{{content}}
-              {{github-app}}
 						</div>
+						<div class="repos"> </div>
 					</article>
 				{{/post}}
 				<!-- end post -->
 			</div>
-
-
 			<!-- end main post area -->
 		</div>
 	</div>
 </section>
+<script src="{{asset "/js/repos.js"}}"></script>
 <!-- end site's main content area -->
