--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -935,7 +935,7 @@ pre {
 	text-align: center;
 
 	a {
-		margin: 10px 0 0;
+		margin: 20px 0 0;
 	}
 }
 /*====================================================
@@ -1911,4 +1911,99 @@ p {
   .fluid-width-video-wrapper {
     height: 236px;
   }
+}
+
+.repos {
+	a {
+		&:hover {
+			.repo {
+				background-color: @theme-color;
+				color: white;
+				cursor: pointer;
+				text-decoration: none;
+
+				h3, p {
+					color:white;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+	.repo {
+		border: 1px solid #eaeaea;
+	  padding: 20px;
+		margin:10px;
+		transition: all .2s ease-out;
+		height: 132px;
+
+		.lang {
+			height: 80px;
+	    width: 80px;
+	    display: inline-block;
+			position: relative;
+			margin-right: 16px;
+			float: left;
+			display: none;
+
+			span {
+				margin: auto;
+		    display: block;
+		    position: absolute;
+		    top: 0;
+		    bottom: 0;
+		    left: 0;
+		    right: 0;
+		    width: fit-content;
+		    height: fit-content;
+		    color: black;
+			}
+		}
+
+		.details {
+			display: inline-block;
+
+			h3 {
+				margin:0;
+			}
+
+			p {
+				color: @text-color;
+				margin: 10px 0;
+				font-size: 14px;
+			}
+
+			img {
+				height:20px;
+				width:20px;
+				border-radius: 2px;
+				display: inline-block;
+				margin-right: 10px;
+			}
+
+			i {
+				font-size: 20px;
+				margin-right: 5px;
+			}
+
+			.author {
+				font-size: 13px;
+			}
+		}
+
+		.Python {
+			background-color: blue;
+		}
+
+		.CSS {
+			background-color: orange;
+		}
+
+		.HTML {
+			background-color: red;
+		}
+
+		.Javascript {
+			background-color: yellow;
+		}
+	}
 }
