--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -20,6 +20,7 @@
 						<div class="post-content">
 							{{content}}
 						</div>
+						<h2>Our Repositories</h2>
 						<div class="repos"> </div>
 					</article>
 				{{/post}}
