--- a/assets/css/scree.css
+++ b/assets/css/scree.css
@@ -1755,7 +1755,7 @@ p {
   flex-wrap: wrap;
 }
 .repos a {
-  width: 49%;
+  width: 50%;
 }
 .repos a:hover .repo {
   background-color: #00ada7;
@@ -1765,13 +1765,13 @@ p {
 }
 .repos a:hover .repo h3,
 .repos a:hover .repo p {
-  color: white !important;
+  color: white;
   text-decoration: none;
 }
 .repos .repo {
   border: 1px solid #eaeaea;
-  padding: 15px;
-  margin: 5px 0;
+  padding: 20px;
+  margin: 5px;
   transition: all 0.2s ease-out;
   position: relative;
   overflow: hidden;
@@ -1811,27 +1811,25 @@ p {
   text-overflow: ellipsis;
   width: 97%;
 }
-.repos .repo .details p:nth-of-type(1) {
+.repos .repo .details p {
   color: #505050;
   margin: 10px 0;
-  font-size: 13px;
-  line-height: 1.3;
-  height: 47px;
-  overflow: hidden;
+  font-size: 14px;
+  line-height: 1;
 }
 .repos .repo .details img {
   height: 20px;
   width: 20px;
   border-radius: 2px;
   display: inline-block;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 .repos .repo .details i {
-  font-size: 17px;
+  font-size: 20px;
+  margin-right: 5px;
 }
 .repos .repo .details .author {
-  font-size: 11px;
-  margin: 0;
+  font-size: 13px;
 }
 .repos .repo .Python {
   background-color: blue;
