--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -1920,7 +1920,7 @@ p {
 	flex-wrap: wrap;
 
 	a {
-		width:50%;
+		width:49%;
 		&:hover {
 			.repo {
 				background-color: @theme-color;
@@ -1928,9 +1928,8 @@ p {
 				cursor: pointer;
 				text-decoration: none;
 
-
 				h3, p {
-					color:white;
+					color:white !important;
 					text-decoration: none;
 				}
 			}
@@ -1938,10 +1937,12 @@ p {
 	}
 	.repo {
 		border: 1px solid #eaeaea;
-	  padding: 20px;
-		margin:10px;
+	  padding: 15px;
+		margin: 5px 0;
 		transition: all .2s ease-out;
-		height: 132px;
+		position: relative;
+		overflow: hidden;
+		height: 150px;
 
 		.lang {
 			height: 80px;
@@ -1968,17 +1969,25 @@ p {
 
 		.details {
 			display: inline-block;
+			position: relative;
+			width: 99%;
 
 			h3 {
 				margin:0;
 				font-size: 1.2em;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				width: 97%;
 			}
 
-			p {
+			p:nth-of-type(1) {
 				color: @text-color;
 				margin: 10px 0;
-				font-size: 14px;
-				line-height: 1;
+				font-size: 13px;
+				line-height: 1.3;
+				height: 47px;
+    		overflow: hidden;
 			}
 
 			img {
@@ -1986,16 +1995,16 @@ p {
 				width:20px;
 				border-radius: 2px;
 				display: inline-block;
-				margin-right: 10px;
-			}
-
-			i {
-				font-size: 20px;
 				margin-right: 5px;
 			}
 
+			i {
+				font-size: 17px;
+			}
+
 			.author {
-				font-size: 13px;
+				font-size: 11px;
+				margin: 0;
 			}
 		}
 
